Initial working Mac Installer JPackage configuration